modified table to change color

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
  <meta name="viewport" content="width=device-width">
  <meta content="index, follow" name="robots">
  <meta http-equiv="cleartype" content="on">
-  <title>Derekvanslyck</title>
+  <title>Bingo-Trivia</title>
   
   <!--Javascript-->
   <script src="js/jquery.js" type="text/javascript"></script>
@@ -34,7 +34,7 @@
  			<a href="#opage" class="ui-btn">Continuous Session</a>
  			<a href="#opage" class="ui-btn">Coverall Session</a>
  		</div>
- 		<div data-role="footer" data-position="fixed"> <h1>Design by: www.JaKaDesigns.com</h1>
+ 		<div data-role="footer" data-position="fixed"> <h1>Design by: JaKaDesigns</h1>
  		</div>
  	</div> 
 <!--Home Page ends-->
@@ -42,7 +42,7 @@
  		<div data-role="page" id="opage">
  		<div data-role="header" data-position="fixed">
  			<h1><a href="#home">Home</a></h1>
- 			<a href="#popupLogin" data-rel="popup" data-position-to="window" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-transition="pop">Operator Login</a>
+ 			<a href="#popupLogin" data-rel="popup" data-position-to="window" class="ui-btn ui-corner-all ui-shadow ui-btn-inline ui-btn-b" data-transition="pop">Login</a>
 			<div data-role="popup" id="popupLogin" data-theme="a" class="ui-corner-all">
     		<form>
         		<div style="padding:10px 20px;">
