--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
  			<a href="#opage" class="ui-btn">Continuous Session</a>
  			<a href="#opage" class="ui-btn">Coverall Session</a>
  			</div>
- 		<div data-role="footer" data-position="fixed"> <h1>Design by: JaKaDesigns</h1>
+ 		<div data-role="footer" data-position="fixed"> <h1>Design by: Jeff Mitsou</h1>
  		</div>
  	</div> 
 <!--Home Page ends-->
